# birdcam

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/camera_interface/: camera_interface.c
components/ota_server/: ota_server.c
components/wifi_interface/: wifi_interface.c
main/: CMakeLists.txt  app_main.c
